--- a/Reddit_Scraper.ipynb
+++ b/Reddit_Scraper.ipynb
@@ -279,7 +279,7 @@
     "credentials = ServiceAccountCredentials.from_json_keyfile_name('./google_key.json', scope)\n",
     "\n",
     "#declare spreadsheet key, can only be view with express permissions\n",
-    "spreadsheet = '1JcfTGEEZujEprVqcGweI2Aggq_ArOGC0zQfTKCo3C9Q'\n",
+    "spreadsheet = 'XXX'\n",
     "\n",
     "#change name of sheet to name of subreddit for coherence\n",
     "wks_name = \"explainlikeimfive\"\n",
